# hosts-man

./: .gitignore  Cargo.toml  README.md
.cargo/: config
.github/workflows/: rust-release.yml  rust.yml
src/: host_entry.rs  lib.rs  main.rs  tcping.rs
src/dns_query/: dns_query.rs  dns_query_0_header.rs  dns_query_1_question.rs  dns_query_2_answer.rs  dns_query_2_resource_record.rs  dns_query_3_authority.rs  dns_query_4_additional.rs  dns_query_struct.rs  mod.rs  utils.rs
