[package]
name = "hosts-man"
version = "0.1.0"
authors = ["Ziyan \"Jerry\" Chen <jerryc443@gmail.com>"]
edition = "2018"
description = "A \"hosts\" manager for everyone."
#documentation = "https://docs.rs/???"
readme = "README.md"
#homepage = "https://???.rs/"
repository = "https://github.com/jerryc05/hosts-man/"
license = "GPL-3.0-or-later"
keywords = ["dns", "hosts"]
categories = [
    "command-line-utilities"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "^1.0.1"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
